solve the problems to deploy

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -3,5 +3,7 @@
     "About": "عن",
     "Services":"خدماتنا",
     "Contact": "اتصل بنا",
-    "welcome": "مرحبا بك بخدمه ايزي"
+    "welcome": "مرحبا بك بخدمه ايزي",
+    "intro":"اكبرسوق لا مركزي للتخفيضات بالمنطقه خدمه هي عباره عن سوق لا مركزي يتكون من مجموعه من المحلات تجاريه المتواجده بين احياء المدينه والتي تقدم خدمات وسلع مختلفه "
+
 }
