--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,6 @@
     "About": "About",
     "Services": "Services",
     "Contact": "Contact",
-    "welcome": "Welcome to Easy Service"
+    "welcome": "Welcome to Easy Service",
+    "intro":"We form the largest decentralized market for discounts in the region."
 }
